# This file is part of cpu-affinity. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/cpu-affinity/master/COPYRIGHT. No part of cpu-affinity, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of cpu-affinity. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/cpu-affinity/master/COPYRIGHT.


[package]
name = "cpu-affinity"
description = "Cross-Platform CPU affinity"
keywords = ["cpu", "affinity"]
categories = ["concurrency", "external-ffi-bindings", "os"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/cpu-affinity"
repository = "https://github.com/lemonrock/cpu-affinity.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
version = "0.4.4"

[dependencies]
likely = "^0.1.0"

[target.'cfg(unix)'.dependencies]
libc = "^0.2.44"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "^0.2.1"
winapi = "^0.3.6"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
dpdk-unix = "^0.3"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
mach = "^0.2.3"
